# youtube-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/youtube_mcp/: auth.py  server.py
src/youtube_mcp/tools/: analytics.py  channel.py  comments.py  playlists.py  publishing.py  reporting.py  search.py  transcripts.py
src/youtube_mcp/utils/: formatting.py  quota.py
tests/: test_auth.py  test_comments.py  test_formatting.py  test_playlists.py  test_publishing.py  test_quota.py  test_reporting.py  test_seo.py  test_tools.py
